<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/warm_backgrounds"
        android:contentDescription="@string/background_image"
        android:alpha="0.4" />

    <!-- App title -->
    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/ace_restaurant"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <!-- Username EditText -->
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/appTitle"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/username"
        android:padding="10dp" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/username"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <!-- Remember Me Switch -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/rememberMeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/password"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/remember_me"
        android:textColor="@color/white" />


    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rememberMeSwitch"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/black"
        android:padding="15dp"
        android:text="@string/login"
        android:textColor="@color/white" />

</RelativeLayout>