<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <!-- Background slideshow or image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/warm_backgrounds"
        android:contentDescription="Background Image"
        android:alpha="0.4" />

    <!-- About Title -->
    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <!-- About Description -->
    <TextView
        android:id="@+id/aboutDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/about_description"
        android:textColor="@color/white"
        android:layout_below="@id/aboutTitle"
        android:textSize="16sp" />

    <!-- Mission Statement -->
    <TextView
        android:id="@+id/missionStatementTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mission_statement_title"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@id/aboutDescription"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/missionStatement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/mission_statement"
        android:textColor="@color/white"
        android:layout_below="@id/missionStatementTitle"
        android:textSize="16sp" />

    <!-- Contact Information -->
    <TextView
        android:id="@+id/contactInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_info_title"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@id/missionStatement"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/contactInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/contact_info"
        android:textColor="@color/white"
        android:layout_below="@id/contactInfoTitle"
        android:textSize="16sp" />
</RelativeLayout>
