<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <!-- Background slideshow or image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/warm_backgrounds"
        android:contentDescription="Background Image"
        android:alpha="0.4" />

    <!-- Title -->
    <TextView
        android:id="@+id/ordering_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Menu"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="16dp" />

    <!-- Shopping Cart Icon -->
    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:src="@drawable/ic_search"
        android:contentDescription="@string/search"
        android:queryHint="Search for items..." />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/shopping_cart_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_shopping_cart"
            android:contentDescription="@string/cart"/>

        <TextView
            android:id="@+id/cart_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/shopping_cart_icon"
            android:layout_alignTop="@id/shopping_cart_icon"
            android:background="@drawable/circle_background"
            android:padding="4dp"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:visibility="gone" />
    </RelativeLayout>

    <!-- Category Buttons -->
    <LinearLayout
        android:id="@+id/category_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_view"
        android:layout_marginTop="-25dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/button_appetizers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/appetizers" />

        <Button
            android:id="@+id/button_entrees"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/entrees" />

        <Button
            android:id="@+id/button_desserts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/desserts" />

        <Button
            android:id="@+id/button_drinks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/drinks" />
    </LinearLayout>

    <!-- RecyclerView for displaying items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/category_buttons"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp" />

</RelativeLayout>
